[tool.poetry]
name = "rmppi"
version = "0.1.0"
description = ""
authors = ["Gijs Groote <gijsgroote@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
tensorflow = "^2.10.0"
numpy = "^1.23.4"
sklearn = "^0.0"
tf = "^1.0.0"
Geometry = "^0.0.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
